# ems-industrial-gateway

./: .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  cfg.defaults.yml  cfg.yml  readme.md  template-secrets.env
.claude/skills/ems-protocol-iteration/: SKILL.md  learnings.md
docs/superpowers/plans/: 2026-05-10-gateway-stub-tier1.md
src/: app.rs  bootstrap.rs  config.rs  dispatch.rs  lib.rs  main.rs
src/asyncapi/: mod.rs  trust.rs  types.rs
src/bacnet/: client.rs  mod.rs
src/bacnet_sc/: client.rs  mod.rs
src/dnp3/: client.rs  mod.rs  tls.rs
src/http/: client.rs  mod.rs
src/modbus/: client.rs  client_test.rs  mod.rs  tls.rs
src/mqtt/: mod.rs  publisher.rs  subscriber.rs
src/redfish/: client.rs  mod.rs  tls.rs
src/snmp/: client.rs  mod.rs
src/synthetic/: cache.rs  formula.rs  mod.rs  task.rs
tests/: bacnet_sc_test.rs  broker_auth_test.rs  dispatch_test.rs  dnp3_tls_test.rs  integration_test.rs  modbus_control_test.rs  modbus_security_test.rs  redfish_mtls_test.rs  snmp3_usm_test.rs
tests/fixtures/: containers.rs  credentials.xml  dnp3_security.rs  mod.rs  modbus_security.rs  pki.rs  redfish_security.rs  seed_dtm.json  spec_stub.rs
