[package]
name = "ems-industrial-gateway"
version = "1.0.0-beta"
edition = "2024"
rust-version = "1.93.0"

[lints.clippy]
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"

[dependencies]
rodbus = "1.4"
csnmp = "0.6"
paho-mqtt = "0.13"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"

[dev-dependencies]
testcontainers = "0.20"

[lib]
name = "ems_industrial_gateway"
path = "src/lib.rs"

[[bin]]
name = "ems-industrial-gateway"
path = "src/main.rs"

[package.metadata.commands]
depcheck = "cargo +nightly udeps"
format = "cargo fmt --all"
lint = "cargo clippy --all-targets --all-features -- -D warnings"
typecheck = "cargo check"
audit-packages = "cargo audit --ignore RUSTSEC-2025-0055 --ignore RUSTSEC-2026-0049 --ignore RUSTSEC-2026-0098 --ignore RUSTSEC-2026-0099 --ignore RUSTSEC-2026-0104 --ignore RUSTSEC-2026-0118 --ignore RUSTSEC-2026-0119 --ignore RUSTSEC-2025-0012 --ignore RUSTSEC-2024-0384 --ignore RUSTSEC-2025-0134"
checks = "cargo cmd depcheck && cargo cmd format && cargo cmd lint && cargo cmd typecheck && cargo cmd audit-packages"
unit = "cargo test --lib"
integration = "cargo test --test integration_test"
cover = "cargo tarpaulin --skip-clean --exclude-files=src/{main,config}.rs --target-dir=target/coverage"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "cargo cmd checks && cargo cmd cover && cargo cmd review && git add -A && git cz && git push"
